// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: none, showPasswordToggle: true, theme: false 2`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #88898C;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #FBFCFF;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #FBFCFF;
}
input:disabled {
  cursor: not-allowed;
  color: #7E7F82;
  border-color: #7E7F82;
  -webkit-text-fill-color: #7E7F82;
}
input[readonly] {
  border-color: #404044;
  background: #404044;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #FBFCFF;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}
"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: error, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: error, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: none, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: none, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: none, showPasswordToggle: true, theme: false 2`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: success, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: false, state: success, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: error, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: error, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: none, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: none, showPasswordToggle: true, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #010205;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 1));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: success, showPasswordToggle: false, theme: true 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 0.5));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 0.5));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 0.5) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 0.5));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 0.5));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: false, hideLabel: true, state: success, showPasswordToggle: true, theme: true 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #197E10;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 0.5));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 0.5));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 0.5) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #0E4809;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 0.5));
  --p-internal-input-password-input-padding-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.button {
  grid-area: 1/5;
  place-self: center;
  padding: calc(4px * var(--p-internal-input-password-scaling, 0.5));
}
.button:not([hidden])~.button {
  grid-area: 1/4;
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #197E10;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;

exports[`getComponentCss() should return correct css for isDisabled: true, hideLabel: true, state: error, showPasswordToggle: false, theme: false 1`] = `
":host {
  display: block;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  margin: 0;
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  border: 2px solid #CC1922;
  border-radius: 4px;
  background: transparent;
  font: normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-indent: 0;
  color: #010205;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  grid-area: 1/1/1/-1;
  padding-block: max(2px, 8px * var(--p-internal-input-password-scaling, 1));
  padding-inline: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  width: auto;
  height: max(calc(6px + 2.125ex), var(--p-internal-input-password-scaling, 1) * (calc(6px + 2.125ex) + 10px));
  box-sizing: content-box;
  padding-inline-start: var(--p-internal-input-password-input-padding-start);
  padding-inline-end: var(--p-internal-input-password-input-padding-end);
}
:not(input[type="password"]) {
  text-overflow: ellipsis;
}
input:focus {
  border-color: #010205;
}
input:disabled {
  cursor: not-allowed;
  color: #949598;
  border-color: #949598;
  -webkit-text-fill-color: #949598;
}
input[readonly] {
  border-color: #D8D8DB;
  background: #D8D8DB;
}
&(input:-internal-autofill-selected),&(input:-internal-autofill-previewed),&(input:-webkit-autofill),&(input:-webkit-autofill:focus) {
  -webkit-background-clip: padding-box;
}
@media(hover:hover) {
  input:not(:disabled):not(:focus):not([readonly]):hover,label:hover~.wrapper input:not(:disabled):not(:focus):not([readonly]) {
    border-color: #951219;
  }
}

.root {
  --p-internal-input-password-input-padding-start: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  --p-internal-input-password-input-padding-end: max(4px, 16px * var(--p-internal-input-password-scaling, 1));
  display: grid;
  gap: 4px;
  min-width: calc(2rem + 16px + 2px*2 + calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1));
}
.wrapper {
  display: grid;
  grid-template-columns: calc(9px + 2px) auto minmax(0, 1fr) auto auto calc(9px + 2px);
}
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  justify-self: flex-start;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CC1922;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}"
`;
